--- a/src/FluentValidation/FluentValidation.csproj
+++ b/src/FluentValidation/FluentValidation.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.1;netstandard1.6;netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>net35;netstandard1.1;netstandard1.6;netstandard2.0;net45</TargetFrameworks>
     <Authors>Jeremy Skinner</Authors>
     <Company />
     <Description>A validation library for .NET that uses a fluent interface to construct strongly-typed validation rules.</Description>
@@ -77,17 +77,34 @@ Full release notes can be found at https://github.com/JeremySkinner/FluentValida
   </PropertyGroup>
   <PropertyGroup>
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <PackageId>FluentValidation.NET35</PackageId>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Compatibility\Resources\**" />
+    <EmbeddedResource Remove="Compatibility\Resources\**" />
+    <None Remove="Compatibility\Resources\**" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="..\CommonAssemblyInfo.cs" Link="CommonAssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.6' or '$(TargetFramework)'=='netstandard1.1'">
+  <ItemGroup Condition="'$(TargetFramework)'!='net35'">
     <PackageReference Include="System.ComponentModel.Primitives" Version="4.3.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'!='netstandard1.1'">
+  <ItemGroup Condition="'$(TargetFramework)'!='netstandard1.1' AND '$(TargetFramework)'!='net35'">
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net35'">
+    <PackageReference Include="AsyncBridge" Version="0.3.1" />
+    <PackageReference Include="ValueTupleBridge" Version="0.1.5" />
+    <PackageReference Include="TaskParallelLibrary" Version="1.0.2856.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'!='net35'">
+    <Compile Remove="Compatibility\*" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Compatibility\StringExtension.cs" Condition="'$(TargetFramework)'!='net35'" />
+  </ItemGroup> 
   <Import Project="..\netfx.props" />
 </Project>
